# g3

./: .gitignore  README.md  mix.exs
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: g3.ex  g3_web.ex
lib/g3/: application.ex  mailer.ex
lib/g3/ai/: gemini_client.ex  local_config.ex  openrouter_client.ex
lib/g3/tracker/: assistant.ex  conversation_summary.ex  draft.ex  fact_search.ex  hierarchy.ex  model_client.ex  prompt.ex  workspace.ex
lib/g3_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/g3_web/components/: core_components.ex  layouts.ex  tracker_graph.ex
lib/g3_web/components/layouts/: root.html.heex
lib/g3_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/g3_web/controllers/page_html/: home.html.heex
lib/g3_web/live/: tracker_graph_live.ex  tracker_live.ex
native/: Cargo.toml  README.md
native/g3_backend/: Cargo.toml
native/g3_backend/src/: main.rs
native/g3_core/: Cargo.toml
native/g3_core/src/: assistant.rs  fact_search.rs  lib.rs  models.rs  prompt.rs  session.rs  spacetimedb_store.rs  store.rs
native/g3_gui/: Cargo.toml
native/g3_gui/src/: app.rs  main.rs
native/g3_spacetimedb/: spacetime.json
native/g3_spacetimedb/spacetimedb/: Cargo.toml
native/g3_spacetimedb/spacetimedb/src/: lib.rs
test/: test_helper.exs
test/g3/tracker/: assistant_test.exs  external_eval_test.exs  fact_search_test.exs  prompt_ab_test.exs  prompt_rl_test.exs  prompt_test.exs  workspace_test.exs
test/g3_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/g3_web/live/: tracker_graph_live_test.exs  tracker_live_test.exs
test/support/: conn_case.ex  prompt_eval.ex  scripted_model_client.ex  tracker_eval_cases.ex
test/support/prompt_variants/: baseline_prompt.ex  candidate_prompt.ex
