[package]
name = "g3_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
parking_lot = "0.12"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["net", "rt-multi-thread", "time"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
