[package]
name = "g3_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui = "0.31"
g3_core = { path = "../g3_core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

