[package]
name = "g3_spacetimedb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb = { version = "2.0.5" }
